app/skins/Main/Main.css
/* ... */
.date-clock-digital-ios-text:secondary {
    -fx-opacity: 0.4;
}
.date-clock-digital-ios-text,
.date-clock-digital-ios-text-year,
.date-clock-digital-ios-text-month,
.date-clock-digital-ios-text-day {
     -fx-font-size: 2em;
}
.date-clock-digital-ios-text-mode {
     -fx-font-size: 1em;
}
.date-clock-digital-ios-separator {
    -fx-pref-height: 8em;
}
.date-clock-digital-ios-separator:vertical .line {
    -fx-opacity: 1;
    -fx-border-width: 1;
}

/******************************* DATE-TIME-CLOCK-WIN *******************************************************************
 * Inherits: VBox
 */
.date-time-clock-win {
    -fx-spacing: 1.25em;
    -fx-alignment: BOTTOM_RIGHT;
    -fx-fill-width: false;
}
.date-time-clock-win-text {
    -fx-font-size: 2em;
    -fx-bounds-type: VISUAL;
}
.date-time-clock-win-text-datepart {}
.date-time-clock-win-text-hourminute {
    -fx-font-size: 6em;
}
.date-time-clock-win-text-date {}

/******************************* TIME-PICKER-CONTENT *******************************************************************
 * inherits: VBox
 * pseudoClasses: readonly
 */
.time-picker-content {
    -fx-alignment: CENTER;
}
.time-picker-content .time-clock-digital {
    -fx-background-color: -skin-focus-bgr-color;
}
.time-picker-content .time-clock-analog {
    -fx-padding: 1em;
}

/******************************* DATE-PICKER-CONTENT *******************************************************************
 * extends: VBox
 * pseudoClasses: readonly
 */
.date-picker-content {
    -fx-alignment: center;
}
/*
 * extends: FlowPane
 */
.date-picker-content-header {
    -fx-padding: 1em;
    -fx-background-color: -skin-focus-bgr-color;
    -fx-alignment: center;
    -fx-hgap: 0.5em;
    -fx-vgap: 0.5em;
    -fx-orientation: horizontal;
    -fx-column-halignment: center;
    -fx-row-valignment: center;
}
/*
 * extends: .label
 */
.date-picker-content-header-year-label {
    -fx-font-size: 2em;
}
/*
 * extends: .label
 */
.date-picker-content-header-month-label {
    -fx-font-size: 2em;
}
/*
 * extends: TitlePane
 * pseudoClasses: weekday - day of the day header cell
 *                other - day cell for other month than the currently displayed
 */
.date-picker-content-cells {
    -fx-padding: 1em;
    -fx-alignment: center;
    -fx-max-width: 17em; // should be padding.left + 7days*cell.width + 6*cell-hgap + padding.right
}
.date-picker-content-cell {
    -fx-pref-width: 2em;
    -fx-max-width: 2em;
    -fx-alignment: center;
    -fx-text-alignment: center;
}
.date-picker-content-cell:weekday {}
.date-picker-content-cell:other {
    -fx-opacity: 0.4;
}
.date-picker-content-cell:selected,
.date-picker-content-cell:hover {
     -fx-background-color: -skin-focus-bgr-color;
    -fx-border-color: -fx-focus-color;
    -fx-background-insets: -1;
    -fx-border-insets: -1;
    -fx-background-radius: 0.25em;
    -fx-border-radius: 0.25em;
    -fx-border-width: 0.5;
    -fx-text-fill: -fx-focus-color
}

/******************************* DATETIME-PICKER-CONTENT ***************************************************************
 * extends: HBox
 * pseudoClasses: readonly
 */
.datetime-picker-content {}
.datetime-picker-content .date-picker-content {}
.datetime-picker-content .time-picker-content {}

/******************************* TIME-TEXT-FIELD ***********************************************************************
 * inherits: .value-text-field
 */
.time-text-field {}
/*
 * inherits: StackPane
 */
.time-text-field-popup {}
.time-text-field-popup .pop-window-content {
    -fx-padding: 0;
}
.time-text-field-popup .time-picker-content {}

/******************************* DATE-TEXT-FIELD ***********************************************************************
 * inherits: .value-text-field
 */
.date-text-field {}
/*
 * inherits: StackPane
 */
.date-text-field-popup {}
.date-text-field-popup .pop-window-content {
    -fx-padding: 0;
}
.date-text-field-popup .time-picker-content {}

/******************************* DATETIME-TEXT-FIELD *******************************************************************
 * inherits: .value-text-field
 */
.datetime-text-field {}
/*
 * inherits: StackPane
 */
.datetime-text-field-popup {}
.datetime-text-field-popup .pop-window-content {
    -fx-padding: 0;
}
.datetime-text-field-popup .time-picker-content {}

/******************************** ITEM PICKER **************************************************************************
 * Picker displays elements to choose from as a scrollable tile grid.
 * inherits: ScrollPane
 * Used in layouts (should mirror the style of widget area), but also popups.
 */
.item-picker {
    -fx-padding: 1px
}
.item-picker > .scroll-bar:vertical {
    -fx-background-color: -skin-pane-color;
}

.item-picker-element {
    -fx-background-color: -skin-pane-color;
    -fx-background-radius: 0;
    -fx-pref-height: 2em;
}

.item-picker-element:filled:hover {
    -fx-background-color: -skin-pane-color;
    -fx-background-insets: 2;
}

/********************************* AUTOCOMPLETE POPUP ******************************************************************
 * Auto complete popup displayed when user types and showing available suggestions.
 * Should look like a combobox popup.
 * inherits: .combo-box-popup
 */
.auto-complete-popup > .list-view {}

/***********************************************************************************************************************
 * Thumbnail.
 */

/*
 * Root - background for thumbnail.
 * inherits: .pane
 */
.thumbnail {}

/*
 * The actual image.
 * inherits: .image-view
 */
.thumbnail-image {}

/*
 * The border of thumbnail
 * inherits: .pane
 */
.thumbnail-border {
    -fx-border-color: black;
    -fx-border-width: 2;
}


/********************************** BALANCER *****************************************************************************
 * Control for left-right volume balance.
 * inherits: .control
 */
.balancer {}
/* ... */

